--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
+<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="initial-scale=1,maximum-scale=1,user-scalable=no"
-    />
+    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
     <title>Spyglass Effect | ArcGIS API for JavaScript</title>
+    <link rel="stylesheet" href="https://js.arcgis.com/4.30/esri/themes/light/main.css" />
+    <link rel="stylesheet" href="style.css" /> <!-- Optional CSS file -->
+    <script src="https://js.arcgis.com/4.30/"></script>
+    <script src="script.js" defer></script> <!-- Optional JS file -->
     <style>
       html,
       body,
@@ -20,189 +22,11 @@
         padding-right: 10px;
       }
     </style>
-
-    <link
-      rel="stylesheet"
-      href="https://js.arcgis.com/4.30/esri/themes/light/main.css"
-    />
-    <script src="https://js.arcgis.com/4.30/"></script>
-
-    <script>
-      require([
-        "esri/Map",
-        "esri/views/MapView",
-        "esri/layers/TileLayer",
-        "esri/Graphic",
-        "esri/layers/GraphicsLayer",
-        "esri/layers/GroupLayer",
-        "esri/geometry/Circle",
-        "esri/request",
-        "esri/geometry/Point",
-        "esri/widgets/Widget",
-        "esri/widgets/Expand"
-      ], function (
-        Map,
-        MapView,
-        TileLayer,
-        Graphic,
-        GraphicsLayer,
-        GroupLayer,
-        Circle,
-        esriRequest,
-        Point,
-        Widget,
-        Expand
-      ) {
-        // Firefly imagery layer
-        const worldImagery = new TileLayer({
-          portalItem: {
-            id: "a66bfb7dd3b14228bf7ba42b138fe2ea",
-          },
-        });
-
-        worldImagery.when(() => {
-          worldImagery.sublayers.forEach((layer) => {
-            layer.popupEnabled = false; // Disable popups for sublayers
-          });
-        });
-
-        const tileLayer = new TileLayer({
-          portalItem: {
-            id: "10df2279f9684e4a9f6a7f08febac2a9", // world imagery
-          },
-        });
-
-        tileLayer.when(() => {
-          tileLayer.sublayers.forEach((layer) => {
-            layer.popupEnabled = false; // Disable popups for sublayers
-          });
-        });
-
-        const graphicsLayer = new GraphicsLayer({
-          blendMode: "destination-in", // Show only what overlaps with the circles
-        });
-
-        const groupLayer = new GroupLayer({
-          layers: [tileLayer, graphicsLayer],
-          opacity: 1, // Start fully visible
-        });
-        
-        // in this case the portalItem has to be a webmap
-
-        const map = new Map({
-          layers: [worldImagery,groupLayer],
-        });
-
-        const view = new MapView({
-          container: "viewDiv",
-          map: map,
-          zoom: 4,
-          center: [-95.712891, 37.09024],
-          constraints: {
-            snapToZoom: false,
-            minScale: 147914381,
-          },
-        });
-        
-        let mainCircleGraphic = null; // Main spyglass inner circle
-        let outerCircleGraphic = null; // Outer spyglass border circle
-
-        function createMainCircle(mapPoint) {
-          const mainCircle = new Circle({
-            center: mapPoint,
-            radius: 100000, // 100,000 meters
-          });
-
-          const mainSymbol = {
-            type: "simple-fill",
-            color: "rgba(255, 255, 255, 1)", // Original transparent white for the fill
-            outline: null, // No outline for the inner circle
-          };
-
-          return new Graphic({
-            geometry: mainCircle,
-            symbol: mainSymbol,
-          });
-        }
-
-        function createOuterCircle(mapPoint) {
-          const outerCircle = new Circle({
-            center: mapPoint,
-            radius: 105000, // Slightly larger radius than the main circle for the border effect
-          });
-
-          const outerSymbol = {
-            type: "simple-fill",
-            color: [0, 0, 0, 0], // Fully transparent fill for the outer circle
-            outline: {
-              color: [255, 255, 255, 0.7], // Semi-transparent white outline
-              width: 10, // Thick outline to mimic the spyglass border
-            },
-          };
-
-          return new Graphic({
-            geometry: outerCircle,
-            symbol: outerSymbol,
-          });
-        }
-
-        // Mouse move event to make the circles follow the mouse
-        view.on("pointer-move", function (event) {
-          const mapPoint = view.toMap(event);
-
-          if (mapPoint) {
-            if (mainCircleGraphic) {
-              graphicsLayer.remove(mainCircleGraphic);
-            }
-            if (outerCircleGraphic) {
-              graphicsLayer.remove(outerCircleGraphic);
-            }
-
-            mainCircleGraphic = createMainCircle(mapPoint);
-            outerCircleGraphic = createOuterCircle(mapPoint);
-
-            graphicsLayer.add(mainCircleGraphic);
-            graphicsLayer.add(outerCircleGraphic);
-
-            worldImagery.effect = "blur(8px) brightness(1.2) grayscale(0.8)";
-            groupLayer.effect = "brightness(1.5) drop-shadow(0px 0px 12px white)";
-          }
-        });
-
-        // Reset the effects when the mouse leaves the map
-        view.on("pointer-leave", function () {
-          if (mainCircleGraphic) {
-            graphicsLayer.remove(mainCircleGraphic);
-            mainCircleGraphic = null;
-          }
-          if (outerCircleGraphic) {
-            graphicsLayer.remove(outerCircleGraphic);
-            outerCircleGraphic = null;
-          }
-
-          worldImagery.effect = null;
-          groupLayer.effect = null;
-        });
-
-        // Mouse click event to zoom to the extent of the spyglass
-        view.on("click", function (event) {
-          const mapPoint = view.toMap(event);
-          const mainCircle = createMainCircle(mapPoint);
-          const zoomExtent = mainCircle.geometry.extent;
-
-          // Zoom to the new extent
-          view.goTo({
-            target: zoomExtent,
-            zoom: view.zoom + 4, // Adjust zoom level as needed
-          });
-        });
-      });
-    </script>
-  </head>
-  <body>
+</head>
+<body>
     <div id="viewDiv"></div>
     <div id="messageDiv" class="esri-widget esri-heading">
-      <h4 class="esri-heading">Hover over the map to reveal imagery with a spyglass effect</h4>
+        <h4 class="esri-heading">Hover over the map to reveal imagery with a spyglass effect</h4>
     </div>
-  </body>
+</body>
 </html>
