--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       #messageDiv {
         position: absolute; /* Make it position absolute */
         top: 0; /* Align it to the top */
-        left: 15; /* Align it to the left */
+        left: 20px; /* Align it to the left */
         padding-left: 10px;
         padding-right: 10px;
         background-color: rgba(255, 255, 255, 0.8); /* Optional: semi-transparent background */
