--- a/index.html
+++ b/index.html
@@ -9,23 +9,33 @@
     <script src="https://js.arcgis.com/4.30/"></script>
     <script src="script.js" defer></script> <!-- Optional JS file -->
     <style>
-      html,
-      body,
-      #viewDiv {
-        padding: 0;
-        margin: 0;
-        height: 100%;
-        width: 100%;
-      }
-      #messageDiv {
-        position: absolute; /* Make it position absolute */
-        top: 0; /* Align it to the top */
-        left: 20px; /* Align it to the left */
-        padding-left: 10px;
-        padding-right: 10px;
-        background-color: rgba(255, 255, 255, 0.8); /* Optional: semi-transparent background */
-        z-index: 10; /* Ensure it appears above the map */
-      }
+        html,
+        body,
+        #viewDiv {
+            padding: 0;
+            margin: 0;
+            height: 100%;
+            width: 100%;
+        }
+        #messageContainer {
+            position: absolute;
+            top: 10px; /* Align it to the top */
+            left: 20px; /* Shift it over to the right */
+            z-index: 10; /* Ensure it appears above the map */
+            display: flex;
+            align-items: center;
+            cursor: pointer; /* Pointer cursor for the icon */
+        }
+        #messageDiv {
+            margin-left: 10px;
+            background-color: rgba(255, 255, 255, 0.8); /* Optional: semi-transparent background */
+            padding: 10px;
+            border-radius: 5px; /* Rounded corners */
+            display: none; /* Hidden by default */
+        }
+        #icon {
+            font-size: 24px; /* Adjust size of the icon */
+        }
     </style>
 </head>
 <body>
