--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
 </head>
 <body>
     <div id="viewDiv"></div>
-     <div id="messageDiv" class="esri-widget esri-heading">
-        <h4 class="esri-heading">Hover over the map to reveal imagery with a spyglass effect</h4>
+    <div id="messageContainer">
+        <span id="icon">+</span> <!-- Plus icon -->
+        <div id="messageDiv" class="esri-widget esri-heading">
+            <h4 class="esri-heading">Hover over the map to reveal imagery with a spyglass effect</h4>
+        </div>
     </div>
 </body>
 </html>
