--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     top: 0; /* Align it with the icon */
     left: 50px; /* Position next to the icon */
     z-index: 10; /* Ensure it appears above the map */
+    width: 200px; /* Set a fixed width */
     }
     </style>
 </head>
@@ -57,7 +58,7 @@
     <div id="messageContainer">
         <span id="icon">+</span> <!-- Plus icon -->
         <div id="messageDiv" class="esri-widget esri-heading">
-            <h4 class="esri-heading">Hover over the map to reveal imagery with a spyglass effect. <br> Click to zoom to the spyglass extent. </h4>
+            <h4 class="esri-heading">Hover over the map to reveal imagery with a spyglass effect. <br/> Click to zoom to the spyglass extent. </h4>
         </div>
     </div>
 </body>
