--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
     <div id="messageContainer">
         <span id="icon">+</span> <!-- Plus icon -->
         <div id="messageDiv" class="esri-widget esri-heading">
-            <h4 class="esri-heading">Hover over the map to reveal imagery with a spyglass effect. <br/> Click to zoom to the spyglass extent. </h4>
+            <h4 class="esri-heading">Hover over the map to reveal imagery with a spyglass effect.</h4>
+            <h4 class="esri-heading">Click to zoom to the spyglass extent.</h4>
         </div>
     </div>
 </body>
