--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     </style>
 </head>
 <body>
+    <div id="titleBar">Spyglass App | ArcGIS Maps SDK for JavaScript</div>
     <div id="viewDiv"></div>
     <div id="messageContainer">
         <span id="icon">+</span> <!-- Plus icon -->
