--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
 </head>
 <body>
     <div>
-    <div id="titleBar">Spyglass App | ArcGIS Maps SDK for JavaScript</div>
+    <div id="titleBar">
+    <h1>Spyglass App | ArcGIS Maps SDK for JavaScript</h1>
+    <div id="websiteCredit">© 2024 Jacob Hogue</div>
+    </div>
     <div id="messageContainer">
         <span id="icon">+</span> <!-- Plus icon -->
         <div id="messageDiv" class="esri-widget esri-heading">
