--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
 </head>
 <body>
     <div>
-    <div id="titleBar">
-    <h1>Spyglass App | ArcGIS Maps SDK for JavaScript</h1>
-    </div>
+    <div id="titleBar">Spyglass App | ArcGIS Maps SDK for JavaScript</div>
     <div id="messageContainer">
         <span id="icon">+</span> <!-- Plus icon -->
         <div id="messageDiv" class="esri-widget esri-heading">
