--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     </style>
 </head>
 <body>
+    <div>
     <div id="titleBar">Spyglass App | ArcGIS Maps SDK for JavaScript</div>
     <div id="messageContainer">
         <span id="icon">+</span> <!-- Plus icon -->
@@ -61,6 +62,7 @@
             <h4 class="esri-heading">Hover over the map to reveal imagery with a spyglass effect.</h4>
             <h4 class="esri-heading">Click to zoom to the spyglass extent.</h4>
         </div>
+    </div>
     </div>
     <div id="radiusControl">
         <label for="radius">Spyglass Radius (meters): </label>
