--- a/index.html
+++ b/index.html
@@ -17,52 +17,80 @@
             height: 100%;
             width: 100%;
         }
-    #messageContainer {
-    position: absolute;
-    top: 10px; /* Align it to the top */
-    left: 70px; /* Shift it over to the right */
-    z-index: 10; /* Ensure it appears above the map */
-    display: flex;
-    align-items: center;
+
+        #titleBar {
+            background-color: darkgray; /* Dark gray background */
+            color: off-white; /* Off-white text */
+            text-align: center; /* Center text */
+            padding: 10px; /* Padding around text */
+            font-size: 24px; /* Font size */
+            font-weight: bold; /* Bold font */
+            position: relative; /* Position for child elements */
+            z-index: 5; /* Ensure it appears above the map */
         }
 
-    #icon {
-    width: 40px; /* Set a fixed width for the icon */
-    height: 40px; /* Set a fixed height for the icon */
-    border-radius: 50%; /* Make it circular */
-    background-color: white; /* Background color of the bubble */
-    display: flex;
-    align-items: center; /* Center the icon vertically */
-    justify-content: center; /* Center the icon horizontally */
-    font-size: 24px; /* Adjust size of the icon */
-    cursor: pointer; /* Pointer cursor for the icon */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3); /* Optional shadow for depth */
-    }
+        #credit {
+            font-size: 14px; /* Smaller font size for credit */
+            position: absolute; /* Position it in the top right */
+            top: 10px; /* Position it at the top */
+            right: 10px; /* Position it at the right */
+            color: white; /* Color for credit text */
+        }
 
-    #messageDiv {
-    margin-left: 10px;
-    background-color: rgba(255, 255, 255, 0.8); /* Optional: semi-transparent background */
-    padding: 10px;
-    border-radius: 5px; /* Rounded corners */
-    display: none; /* Hidden by default */
-    position: absolute; /* Position it relative to the container */
-    top: 0; /* Align it with the icon */
-    left: 50px; /* Position next to the icon */
-    z-index: 10; /* Ensure it appears above the map */
-    width: 200px; /* Set a fixed width */
-    }
+        #messageContainer {
+            position: absolute;
+            top: 10px; /* Align it to the top */
+            left: 70px; /* Shift it over to the right */
+            z-index: 10; /* Ensure it appears above the map */
+            display: flex;
+            align-items: center;
+        }
+
+        #icon {
+            width: 40px; /* Set a fixed width for the icon */
+            height: 40px; /* Set a fixed height for the icon */
+            border-radius: 50%; /* Make it circular */
+            background-color: white; /* Background color of the bubble */
+            display: flex;
+            align-items: center; /* Center the icon vertically */
+            justify-content: center; /* Center the icon horizontally */
+            font-size: 24px; /* Adjust size of the icon */
+            cursor: pointer; /* Pointer cursor for the icon */
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3); /* Optional shadow for depth */
+        }
+
+        #messageDiv {
+            margin-left: 10px;
+            background-color: rgba(255, 255, 255, 0.8); /* Optional: semi-transparent background */
+            padding: 10px;
+            border-radius: 5px; /* Rounded corners */
+            display: none; /* Hidden by default */
+            position: absolute; /* Position it relative to the container */
+            top: 0; /* Align it with the icon */
+            left: 50px; /* Position next to the icon */
+            z-index: 10; /* Ensure it appears above the map */
+            width: 200px; /* Set a fixed width */
+        }
+
+        #radiusControl {
+            position: absolute; /* Position control on top of the map */
+            top: 60px; /* Adjust as needed */
+            left: 10px; /* Align to the left */
+            z-index: 10; /* Ensure it appears above the map */
+        }
     </style>
 </head>
 <body>
-    <div>
-    <div id="titleBar">Spyglass App | ArcGIS Maps SDK for JavaScript</div>
+    <div id="titleBar">
+        Spyglass App | ArcGIS Maps SDK for JavaScript
+        <div id="credit">Website Credit</div> <!-- Add credit text here -->
+    </div>
     <div id="messageContainer">
         <span id="icon">+</span> <!-- Plus icon -->
         <div id="messageDiv" class="esri-widget esri-heading">
             <h4 class="esri-heading">Hover over the map to reveal imagery with a spyglass effect.</h4>
             <h4 class="esri-heading">Click to zoom to the spyglass extent.</h4>
         </div>
-    </div>
     </div>
     <div id="radiusControl">
         <label for="radius">Spyglass Radius (meters): </label>
